snapshots/truth__parse__tests__unexpected_token.snap
---
source: src/parse/tests.rs
expression: "expect_parse_error::<ast::Stmt>(\"unexpected\", \"int x = int;\").trim()"
---
error: unexpected token `int`
  ┌─ <input>:1:9
  │
1 │ int x = int;
  │         ^^^ unexpected token
  │
  = 
    Expected one of "!", "$", "%", "(", "-", "REG", "_S", "_f", "anim", "case", "cos", "default", "ecli", "entry", "false", "mapfile", "offsetof", "script", "sin", "sqrt", "timeline", "timeof", "true", FLOAT, FLOAT_RAD, IDENT, INSTR, INT, INT_BIN, INT_HEX or STRING
